rename page.css 6

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -30571,7 +30571,7 @@ tr.hide {
   margin-bottom: 8px !important;
 }
 @media (hover: hover) {
-  ._np90lm:hover {
+  .guest-req__category-option-btn:hover {
     color: #000 !important;
     border-color: #000 !important;
   }
@@ -41943,7 +41943,7 @@ tr.hide {
   padding-bottom: 12px !important;
 }
 @media (min-width: 1128px) {
-  ._4znzk04 {
+  .site-content__page-wrapper-main {
     width: calc((100vw - 260px) - 320px) !important;
   }
 }
@@ -42202,13 +42202,13 @@ tr.hide {
   font-weight: 600 !important;
   color: #222 !important;
 }
-._1djpu7h {
+.site-content__page-main-option-select-wrapper {
   margin-top: 8px !important;
   border-radius: 8px !important;
   box-shadow: rgb(176 176 176) 0 0 0 1px inset !important;
   position: relative !important;
 }
-._pk111c {
+.site-content__page-main-option-select {
   min-height: 56px !important;
   width: 100% !important;
   border: none !important;
@@ -42284,7 +42284,7 @@ tr.hide {
   padding-left: 0 !important;
   padding-right: 12px !important;
 }
-._tz7s061 {
+.site-content__page-wrapper-right {
   position: absolute !important;
   left: 100vw !important;
   transition: left 0.5s !important;
@@ -42293,21 +42293,21 @@ tr.hide {
   height: 100% !important;
 }
 @media (min-width: 744px) {
-  ._tz7s061 {
+  .site-content__page-wrapper-right {
     left: calc(100vw - 320px) !important;
   }
 }
 @media (min-width: 1128px) {
-  ._tz7s061 {
+  .site-content__page-wrapper-right {
     left: calc((100vw - 260px) - 320px) !important;
   }
 }
-._eqmd9g {
+.site-content__page-wrapper-right-wrapper {
   width: 100% !important;
   height: 100% !important;
   border-left: 4px solid #f7f7f7 !important;
 }
-._1ha6v47 {
+.site-content__page-wrapper-right-header {
   -webkit-box-align: center !important;
   display: flex !important;
   align-items: center !important;
@@ -42319,7 +42319,7 @@ tr.hide {
   width: 100% !important;
   padding: 24px !important;
 }
-._1ftacon {
+.site-content__page-right-header-text {
   float: left !important;
   line-height: 20px !important;
   margin: 0 !important;
@@ -42329,7 +42329,7 @@ tr.hide {
   font-weight: 800 !important;
   font-size: 16px !important;
 }
-._c143gl {
+.site-content__page-right-tips {
   -webkit-box-pack: center !important;
   display: flex !important;
   justify-content: center !important;
@@ -42339,12 +42339,12 @@ tr.hide {
   height: calc(100% - 70px) !important;
   overflow-y: scroll !important;
 }
-._1loiqjs {
+.site-content__page-right-tips-wrapper {
   margin: 40px 0 !important;
   height: max-content !important;
   width: 280px !important;
 }
-._1htwqzi {
+.site-content__page-right-dos-donts {
   box-shadow: rgb(0 0 0 / 5%) 0 2px 20px !important;
   border-radius: 16px !important;
   padding: 24px !important;
@@ -42352,7 +42352,7 @@ tr.hide {
   width: 280px !important;
   background: #fff !important;
 }
-._1098j4y {
+.site-content__dos-donts-header {
   -webkit-box-pack: justify !important;
   -webkit-box-direction: normal !important;
   -webkit-box-orient: horizontal !important;
@@ -42366,18 +42366,18 @@ tr.hide {
   font-size: 10px !important;
   line-height: 12px !important;
 }
-._19bx90y {
+.site-content__dos-donts-header-h3 {
   font-size: inherit !important;
   margin: 0 !important;
 }
-._r8kijh {
+.site-content__dos-donts-list {
   width: 100% !important;
   height: 100% !important;
   color: #222 !important;
   font-size: 14px !important;
   line-height: 18px !important;
 }
-._4znzk04 {
+.site-content__page-wrapper-main {
   left: 0 !important;
   position: relative !important;
   overflow: hidden !important;
@@ -42386,7 +42386,7 @@ tr.hide {
   transition: width 0.5s !important;
 }
 @media (min-width: 744px) {
-  ._4znzk04 {
+  .site-content__page-wrapper-main {
     width: calc(100vw - 320px) !important;
   }
 }
@@ -42396,7 +42396,7 @@ tr.hide {
   color: #717171 !important;
   margin-top: 8px !important;
 }
-._4mmmhh {
+.site-content__page-main-option-wrapper {
   position: relative !important;
   display: flex !important;
   width: 100% !important;
@@ -42411,7 +42411,7 @@ tr.hide {
   line-height: 20px !important;
   font-weight: 400 !important;
 }
-._1ttk9u5 {
+.site-content__page-main-option-label {
   padding-top: 24px !important;
 }
 ._9j2psw {
@@ -42424,19 +42424,19 @@ tr.hide {
   font-weight: 400 !important;
   color: #717171 !important;
 }
-._n3t7h5 {
+.booking-setting__suggestion {
   position: relative !important;
   margin-top: 20px !important;
   margin-left: 24px !important;
   max-width: 500px !important;
   color: #222 !important;
 }
-._1ku5k6q {
+.booking-setting__suggestion-wrapper {
   position: absolute !important;
   left: -32px !important;
   top: -4px !important;
 }
-._1scyp6q {
+.guest-req__category-option {
   margin-top: 16px !important;
   display: flex !important;
   flex-wrap: wrap !important;
@@ -42463,7 +42463,7 @@ tr.hide {
   background-color: #f7f7f7 !important;
   color: #222 !important;
 }
-._np90lm {
+.guest-req__category-option-btn {
   cursor: pointer !important;
   text-align: center !important;
   border: 1px solid #ddd !important;
