rename page.css 7

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -16652,7 +16652,7 @@ fieldset[disabled] .btn {
   user-select: none!important
 }
 @supports (--a:a) {
-  ._1f7hhcdo {
+  .status-no {
     background-color: var(--header_brand-color,var(--ihf-tp-q))!important
   }
 }
