--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -12009,8 +12009,8 @@ h3:first-child {
     display: none !important;
   }
 }
-._ywzjut3::after,
-._ywzjut3:hover::after,
+.app-theme__navbar-left-menu-list-text-a::after,
+.app-theme__navbar-left-menu-list-text-a:hover::after,
 .app-theme__navbar-left-menu-list-text:hover::after {
   content: '' !important;
   display: block !important;
@@ -12238,7 +12238,7 @@ h3:first-child {
   border-radius: 100px !important;
   box-shadow: inset 0 0 0 1px #b0b0b0 !important;
 }
-._1oynp31 {
+.input-field-search {
   width: 100% !important;
   border: none !important;
   outline: 0 !important;
@@ -30498,7 +30498,7 @@ tr.hide {
 @media (hover: hover) {
   @supports (-webkit-appearance: none) or (-moz-appearance: none) or
     (appearance: none) {
-    ._g4rlqtx:hover {
+    .explore-filter-menu__radio-input:hover {
       border-color: #000 !important;
     }
   }
@@ -42782,7 +42782,7 @@ textarea {
   padding-left: 16px !important;
   font-weight: 400 !important;
 }
-._tt122m {
+.font-w-400 {
   font-weight: 400 !important;
 }
 ._uvcwnv {
@@ -42792,7 +42792,7 @@ textarea {
 ._1a5re9s {
   text-decoration: underline !important;
 }
-._1wjt7fx {
+.site-content__content-menu-legend {
   margin-bottom: 8px !important;
   color: #222 !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -42871,7 +42871,7 @@ textarea {
   border-radius: 100px !important;
   box-shadow: rgb(176 176 176) 0 0 0 1px inset !important;
 }
-._1a488ly {
+.inbox-items-header__icon {
   -webkit-box-align: center !important;
   display: flex !important;
   align-items: center !important;
@@ -42880,7 +42880,7 @@ textarea {
   margin-right: 8px !important;
   padding: 0 !important;
 }
-._1oynp31 {
+.input-field-search {
   width: 100% !important;
   border: none !important;
   outline: 0 !important;
@@ -42938,7 +42938,7 @@ textarea {
   font-weight: 600 !important;
   text-decoration: underline !important;
 }
-._1wgf3yo {
+.textarea-label-wrapper {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     'Helvetica Neue', sans-serif !important;
   font-size: 16px !important;
@@ -42985,7 +42985,7 @@ textarea {
     padding-right: 24px !important;
   }
 }
-._1uhu1ks {
+.site-content__content-wrapper-rules {
   font-size: 16px !important;
   line-height: 24px !important;
   color: #222 !important;
@@ -42993,14 +42993,14 @@ textarea {
   margin-top: 24px !important;
   margin-bottom: 24px !important;
 }
-._14mdv64 {
+.site-content__content-wrapper-rules-ol {
   margin: 0 !important;
   padding-left: 16px !important;
 }
 .calendar-sideba__sched-event-time-wrapper {
   font-weight: 800 !important;
 }
-._1tluusc {
+.site-content__content-wrapper-rules-radio-grp {
   margin-top: 24px !important;
   border-top: 1px solid #ddd !important;
 }
@@ -43008,7 +43008,7 @@ textarea {
   margin-top: 24px !important;
   margin-bottom: 24px !important;
 }
-._1j123cny {
+.site-content__content-wrapper-rules-radio-yes {
   cursor: pointer !important;
   box-sizing: border-box !important;
   height: 22px !important;
@@ -43019,7 +43019,7 @@ textarea {
 }
 @supports (-webkit-appearance: none) or (-moz-appearance: none) or
   (appearance: none) {
-  ._1j123cny {
+  .site-content__content-wrapper-rules-radio-yes {
     appearance: none !important;
     border-style: solid !important;
     overflow: hidden !important;
@@ -43031,7 +43031,7 @@ textarea {
     background: #fff !important;
   }
 }
-._dclc1y {
+.site-content__content-wrapper-rules-radio-text-wrapper {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     'Helvetica Neue', sans-serif !important;
   font-size: 18px !important;
@@ -43042,7 +43042,7 @@ textarea {
 .payment-payout__notice-desc {
   font-size: 16px !important;
 }
-._unew8tb {
+.site-content__content-wrapper-rules-radio-no {
   cursor: pointer !important;
   box-sizing: border-box !important;
   height: 22px !important;
@@ -43053,7 +43053,7 @@ textarea {
 }
 @supports (-webkit-appearance: none) or (-moz-appearance: none) or
   (appearance: none) {
-  ._unew8tb {
+  .site-content__content-wrapper-rules-radio-no {
     appearance: none !important;
     border-width: 1px !important;
     border-style: solid !important;
@@ -43104,7 +43104,7 @@ textarea {
 .place__show-photos-icon {
   margin-right: 12px !important;
 }
-._1mm0shk {
+.site-content__content-wrapper-rules-note {
   margin: 16px 0 !important;
 }
 a,
@@ -43113,7 +43113,7 @@ a:hover {
   color: inherit;
   text-decoration: none;
 }
-._1dsb80r {
+.explore-filter-menu__list-link {
   color: #222 !important;
   font-weight: 600 !important;
   text-decoration: underline !important;
@@ -43766,18 +43766,18 @@ a:hover {
     position: absolute !important;
   }
 }
-._1gh8ie6 {
+.guest-container__form-question {
   font-weight: 600 !important;
   color: #222 !important;
   font-size: 16px !important;
   line-height: 20px !important;
 }
-._17qgme1 {
+.guest-container__form-question-ul {
   margin-top: 16px !important;
   margin-bottom: 16px !important;
   padding-left: 24px !important;
 }
-._1pz1yyw {
+.guest-container__form-question-li {
   font-size: 16px !important;
   line-height: 20px !important;
   color: #222 !important;
@@ -43790,7 +43790,7 @@ a:hover {
   text-align: start !important;
   text-align-last: start !important;
 }
-._4l12l8 {
+.contact-host__textarea-container {
   margin-top: 8px !important;
 }
 .contact-host__textarea-wrapper {
@@ -43808,7 +43808,7 @@ a:hover {
   justify-content: space-between !important;
   padding-top: 8px !important;
 }
-._pxnjg {
+.description-textarea__help {
   display: flex !important;
   color: #717171 !important;
   font-size: 12px !important;
@@ -43841,12 +43841,12 @@ a:hover {
   text-align: inherit !important;
   outline: 0 !important;
 }
-._25bp3z {
+.site-content__content-fieldset {
   border: none !important;
   margin: 0 !important;
   padding: 0 !important;
 }
-._1wjt7fx {
+.site-content__content-menu-legend {
   margin-bottom: 8px !important;
   color: #222 !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -43855,7 +43855,7 @@ a:hover {
   line-height: 20px !important;
   font-weight: 600 !important;
 }
-._1wlfjr {
+.site-content__content-menu-question {
   padding-bottom: 8px !important;
 }
 .margin__left-auto {
@@ -43943,7 +43943,7 @@ a:hover {
 ._1mqc21n {
   margin-left: 16px !important;
 }
-._g4rlqtx {
+.explore-filter-menu__radio-input {
   cursor: pointer !important;
   box-sizing: border-box !important;
   height: 22px !important;
@@ -43952,7 +43952,7 @@ a:hover {
 }
 @supports (-webkit-appearance: none) or (-moz-appearance: none) or
   (appearance: none) {
-  ._g4rlqtx {
+  .explore-filter-menu__radio-input {
     appearance: none !important;
     border-style: solid !important;
     overflow: hidden !important;
@@ -44428,7 +44428,7 @@ a:hover {
   flex: 1 1 0% !important;
   padding: 0 !important;
 }
-._12i6oakv {
+.header__search-date-option-exact-dates-btn {
   cursor: pointer !important;
   text-align: center !important;
   border: 1px solid #222 !important;
@@ -44449,7 +44449,7 @@ a:hover {
   background-color: #f7f7f7 !important;
   color: #222 !important;
 }
-._12i6oakv::after {
+.header__search-date-option-exact-dates-btn::after {
   content: '' !important;
   width: calc(100% + 2px) !important;
   height: calc(100% + 2px) !important;
@@ -44708,7 +44708,7 @@ a:hover {
   flex-direction: column !important;
   height: 100% !important;
 }
-._13jnc9w {
+.place__recommended-section {
   margin-bottom: 40px !important;
 }
 ._1mke8tr {
@@ -45567,7 +45567,7 @@ a:hover {
   border-radius: 100px !important;
   box-shadow: inset 0 0 0 1px #b0b0b0 !important;
 }
-._1a488ly {
+.inbox-items-header__icon {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   display: -webkit-box !important;
@@ -45589,7 +45589,7 @@ a:hover {
   flex: 1 !important;
   padding: 0 !important;
 }
-._1oynp31 {
+.input-field-search {
   width: 100% !important;
   border: none !important;
   outline: 0 !important;
@@ -45611,28 +45611,28 @@ a:hover {
   padding: 0 !important;
   text-overflow: ellipsis !important;
 }
-._1oynp31:-webkit-autofill {
+.input-field-search:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 30px #fff inset !important;
 }
-._1oynp31:-webkit-autofill:hover {
+.input-field-search:-webkit-autofill:hover {
   -webkit-box-shadow: 0 0 0 30px #fff inset !important;
 }
-._1oynp31:-webkit-autofill:focus {
+.input-field-search:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0 30px #fff inset !important;
 }
-._1oynp31:-webkit-autofill:active {
+.input-field-search:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 30px #fff inset !important;
 }
-._1oynp31::-ms-clear {
+.input-field-search::-ms-clear {
   display: none !important;
 }
-._1oynp31:disabled {
+.input-field-search:disabled {
   cursor: not-allowed !important;
 }
-._1oynp31:disabled::placeholder {
+.input-field-search:disabled::placeholder {
   color: #ddd !important;
 }
-._1oynp31::placeholder {
+.input-field-search::placeholder {
   color: #717171 !important;
 }
 ._b76aq7 {
@@ -45951,7 +45951,7 @@ a:hover {
   line-height: 18px !important;
   padding-top: 2px !important;
 }
-._1m2pcp0 {
+.description-textarea__help-text {
   font-size: 12px !important;
   line-height: 16px !important;
 }
@@ -47849,7 +47849,7 @@ a:hover {
   padding-bottom: 0 !important;
   padding-left: 15px !important;
 }
-._ywzjut3 {
+.app-theme__navbar-left-menu-list-text-a {
   padding: 23px 0 !important;
   margin: 0 4px !important;
   position: relative !important;
@@ -47858,8 +47858,8 @@ a:hover {
   line-height: 18px !important;
   color: #222 !important;
 }
-._ywzjut3::after,
-._ywzjut3:hover::after {
+.app-theme__navbar-left-menu-list-text-a::after,
+.app-theme__navbar-left-menu-list-text-a:hover::after {
   content: '' !important;
   display: block !important;
   width: 100% !important;
@@ -47903,11 +47903,11 @@ a:hover {
   background: #008489 !important;
   z-index: 1999 !important;
 }
-._josukr {
+.app-theme__navbar-left-menu-list-strong {
   position: absolute !important;
   top: 10px !important;
 }
-._19pdp32f {
+.app-theme__menu-list-strong-text {
   font-weight: 800 !important;
   line-height: 1.1 !important;
   letter-spacing: -0.3px !important;
@@ -48522,7 +48522,7 @@ video::cue {
   line-height: 20px !important;
   font-weight: 400 !important;
 }
-._1yw7hpv {
+.auth-container__form-email-label {
   position: relative !important;
   flex: 1 1 0% !important;
   padding: 0 !important;
@@ -49113,7 +49113,7 @@ label {
     'Helvetica Neue', sans-serif !important;
   font-weight: 400 !important;
 }
-._sbmagf {
+.presentation-dialog {
   position: absolute !important;
   pointer-events: none !important;
 }
@@ -49158,7 +49158,7 @@ label {
   display: flex !important;
   opacity: 0 !important;
 }
-._usmffxk {
+.auth-container__form-input-field-wrapper {
   display: flex !important;
   opacity: 1 !important;
 }
@@ -49175,7 +49175,7 @@ label {
   padding-left: 0 !important;
   padding-right: 12px !important;
 }
-._t26glb {
+.presentation-dialog-spacer {
   position: absolute !important;
   pointer-events: none !important;
   border-style: solid !important;
@@ -49214,7 +49214,7 @@ label {
   line-height: inherit !important;
   appearance: none !important;
 }
-._1ubw29 {
+.header-nav__button {
   position: relative !important;
   display: inline !important;
 }
@@ -49303,7 +49303,7 @@ label {
     padding-right: 0 !important;
   }
 }
-._16e70jgn {
+.relative-mx-0 {
   position: relative !important;
   width: 58.333333333333336% !important;
   margin-left: 0 !important;
@@ -49323,7 +49323,7 @@ label {
 ._qzcds1 {
   margin-bottom: 32px !important;
 }
-._1muy8yf {
+.site-content__content-menu-h2-text {
   font-size: 22px !important;
   line-height: 26px !important;
   font-weight: 600 !important;
@@ -49460,7 +49460,7 @@ label {
     display: flex !important;
   }
 }
-._11eqlma4 {
+.button-container__wrapper {
   cursor: pointer !important;
   position: relative !important;
   -ms-touch-action: manipulation !important;
@@ -49488,56 +49488,56 @@ label {
   height: 100% !important;
   width: 100% !important;
 }
-._11eqlma4:focus-visible {
+.button-container__wrapper:focus-visible {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x) !important;
 }
-._11eqlma4:focus-visible::-moz-focus-inner {
+.button-container__wrapper:focus-visible::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._11eqlma4:focus-visible:focus::-moz-focus-inner {
+.button-container__wrapper:focus-visible:focus::-moz-focus-inner {
   border: none !important;
 }
-._11eqlma4:focus-visible:-moz-focusring {
+.button-container__wrapper:focus-visible:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._11eqlma4:focus-visible {
+  .button-container__wrapper:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._11eqlma4:active {
+.button-container__wrapper:active {
   -webkit-transform: none !important;
   -ms-transform: none !important;
   transform: none !important;
 }
-._11eqlma4:disabled {
+.button-container__wrapper:disabled {
   cursor: not-allowed !important;
   opacity: 1 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._11eqlma4 {
+  .button-container__wrapper {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._11eqlma4::-moz-focus-inner {
+.button-container__wrapper::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._11eqlma4:focus::-moz-focus-inner {
+.button-container__wrapper:focus::-moz-focus-inner {
   border: none !important;
 }
-._11eqlma4:-moz-focusring {
+.button-container__wrapper:-moz-focusring {
   outline: 0 !important;
 }
 ._v0gz4uz {
@@ -49549,7 +49549,7 @@ label {
   background-position: 50% 50% !important;
   background-repeat: no-repeat !important;
 }
-._1s21a6e2 {
+.confirm-pay__content-right-section {
   position: relative !important;
   width: 33.33333333333333% !important;
   margin-left: 8.333333333333332% !important;
@@ -49870,7 +49870,7 @@ label {
     background-image: none !important;
   }
 }
-._1f7hhcdo {
+.status-no {
   background-color: var(--ihf-tp-q) !important;
   box-shadow: 0 0 0 1.5px var(--f-mkcy-f) !important;
   position: absolute !important;
@@ -49889,7 +49889,7 @@ label {
   top: -2px !important;
 }
 @supports (--a: a) {
-  ._1f7hhcdo {
+  .status-no {
     background-color: var(--header_brand-color, var(--ihf-tp-q)) !important;
   }
 }
@@ -49967,7 +49967,7 @@ label {
   margin-left: 0 !important;
   opacity: 0 !important;
 }
-._slm4k1 {
+.spinner-chart__btn-wrapper {
   font-weight: 600 !important;
   font-size: 12px !important;
   line-height: 16px !important;
