--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1041,7 +1041,7 @@
   user-select: none!important
 }
 @supports (--a:a) {
-  ._1f7hhcdo {
+  .status-no {
     background-color: var(--header_brand-color,var(--ihf-tp-q))!important
   }
 }
