--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -50128,3 +50128,585 @@ label {
   flex: 1 1 auto !important;
   width: 100% !important;
 }
+.products-container__gallery-full-width-img-wrap {
+  height: 100% !important;
+  width: 100% !important;
+  min-height: 300px !important;
+  max-height: -webkit-calc(70vh - 64px) !important;
+  max-height: -moz-calc(70vh - 64px) !important;
+  max-height: calc(70vh - 64px) !important;
+  display: none !important;
+}
+@media (min-aspect-ratio: 63 / 100) and (min-width: 376px) {
+  .products-container__gallery-full-width-img-wrap {
+    max-height: -webkit-calc(70vh - 80px) !important;
+    max-height: -moz-calc(70vh - 80px) !important;
+    max-height: calc(70vh - 80px) !important;
+    display: block !important;
+  }
+}
+._6tbg2q {
+  height: 0px !important;
+  width: 0px !important;
+  position: absolute !important;
+}
+@supports (object-fit: cover) {
+  ._6tbg2q {
+    height: 100% !important;
+    width: 100% !important;
+  }
+}
+.products-container__gallery-wrapper-overlay-luxe {
+  height: 100% !important;
+  width: 100% !important;
+  left: 0 !important;
+  top: 0 !important;
+  position: absolute !important;
+}
+._z4lmgp {
+  display: contents !important;
+}
+._b21f4g {
+  border: 0px !important;
+  clip: rect(0 0 0 0) !important;
+  -webkit-clip-path: inset(100%) !important;
+  clip-path: inset(100%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0px !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+  margin-top: -1px !important;
+}
+.c1yo0219[class][class]::before {
+  display: flex;
+  content: '';
+}
+.c1yo0219[class][class]::before {
+  display: flex;
+  content: '';
+}
+._14oeh8k8 {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  position: relative !important;
+  height: 100% !important;
+  max-height: 100% !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  display: flex !important;
+  flex-direction: column !important;
+}
+._xgxxi4 {
+  -webkit-box-pack: justify !important;
+  -webkit-box-flex: 0 !important;
+  -webkit-box-align: center !important;
+  align-items: center !important;
+  display: flex !important;
+  flex: 0 0 60px !important;
+  justify-content: space-between !important;
+  padding: 0px 24px !important;
+  position: sticky !important;
+  text-align: left !important;
+  top: 0px !important;
+}
+@media (min-width: 744px) {
+  ._xgxxi4 {
+    flex-basis: 60px !important;
+  }
+}
+._xgxxi4 {
+  -webkit-box-pack: justify !important;
+  -webkit-box-flex: 0 !important;
+  -webkit-box-align: center !important;
+  align-items: center !important;
+  display: flex !important;
+  flex: 0 0 60px !important;
+  justify-content: space-between !important;
+  padding: 0px 24px !important;
+  position: sticky !important;
+  text-align: left !important;
+  top: 0px !important;
+}
+@media (min-width: 744px) {
+  ._xgxxi4 {
+    flex-basis: 60px !important;
+  }
+}
+._1kpxj8f {
+  align-self: flex-start !important;
+  margin-top: 24px !important;
+}
+._oda838 {
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: transparent !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
+}
+._oda838::before {
+  content: "" !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 32px !important;
+  height: 32px !important;
+  border-radius: 50% !important;
+}
+._e296pg {
+  position: relative !important;
+}
+._1e5q4qoz {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0px -8px !important;
+  position: relative !important;
+  text-align: center !important;
+  width: auto !important;
+  touch-action: manipulation !important;
+  font-family: var(--e-ls-qkw) !important;
+  font-size: var(--c-zdwk-p) !important;
+  line-height: var(--j-p-z-kco) !important;
+  font-weight: var(--jx-zk-pv) !important;
+  border-radius: var(--go-h-jh-l) !important;
+  outline: none !important;
+  padding: 8px !important;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  border: none !important;
+  background: transparent !important;
+  color: var(--f-k-smk-x) !important;
+  text-decoration: underline !important;
+}
+._5kaapu {
+  -webkit-box-align: center !important;
+  display: flex !important;
+  align-items: center !important;
+}
+._14tkmhr {
+  margin-right: 8px !important;
+}
+.t5p7tdn[class][class] {
+  color: var(--f-k-smk-x);
+  font-family: var(--e-ls-qkw);
+  font-weight: var(--jx-zk-pv);
+  font-size: var(--lhy-d-yl);
+  line-height: var(--fme-bf-w);
+}
+.dir.hnwb2pb[class][class] {
+  margin: 0;
+  padding: 0;
+}
+@media (min-width: 1128px) {
+  .dir.sewcpu6[class][class] {
+    padding-bottom: calc(var(--spacingBottomLargeAndAbove, var(--spacingBottom)) * var(--fgg-f-l-a));
+  }
+}
+@media (min-width: 744px) {
+  .dir.sewcpu6[class][class] {
+    padding-bottom: calc(var(--spacingBottomMediumAndAbove, var(--spacingBottom)) * var(--fgg-f-l-a));
+  }
+}
+._1i6g032 {
+  -webkit-box-pack: start !important;
+  -webkit-box-align: start !important;
+  display: flex !important;
+  flex-flow: row wrap !important;
+  align-items: flex-start !important;
+  justify-content: flex-start !important;
+  margin-left: -8px !important;
+  margin-right: -8px !important;
+}
+@media (min-width: 744px) {
+  ._lk9qdq {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+    width: 20% !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._lk9qdq {
+    width: 14.2857% !important;
+  }
+}
+._lk9qdq {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+  margin-top: 0px !important;
+  padding-bottom: 8px !important;
+  padding-top: 8px !important;
+}
+._11z41kk {
+  overflow: hidden !important;
+  border-radius: 8px !important;
+}
+@media (min-width: 744px) {
+  ._11z41kk {
+    border-radius: unset !important;
+    box-shadow: rgb(0 0 0 / 18%) 0px 2px 4px !important;
+  }
+}
+._1cb9q3xq {
+  inset: 0px !important;
+  height: 0px !important;
+  width: 0px !important;
+  position: absolute !important;
+}
+@media (min-width: 1128px) {
+  ._lk9qdq:hover img {
+    opacity: 0.95 !important;
+  }
+}
+@supports (object-fit: cover) {
+  ._1cb9q3xq {
+    height: 100% !important;
+    width: 100% !important;
+  }
+}
+.dir.plmw1e5[class][class] {
+    margin-left: auto;
+    margin-right: auto;
+}
+.mq5rv0q[class][class] {
+    max-width: var(--gp-section-max-width,var(--maxWidth));
+}
+.plmw1e5[class][class] {
+    height: 100%;
+    width: 100%;
+}
+._1838e91 {
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  padding-top: 8px !important;
+}
+._10kc7acl {
+  position: relative !important;
+  width: 100% !important;
+  margin-left: 0% !important;
+  margin-right: 0% !important;
+  padding-left: 6px !important;
+  padding-right: 6px !important;
+}
+@media (min-width: 375px) {
+  ._10kc7acl {
+    padding-left: 6px !important;
+    padding-right: 6px !important;
+  }
+}
+@media (min-width: 744px) {
+  ._10kc7acl {
+    width: 66.6667% !important;
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 950px) {
+  ._10kc7acl {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._10kc7acl {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 1440px) {
+  ._10kc7acl {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+._125gmrun {
+  display: grid !important;
+  gap: 8px !important;
+  grid-template-columns: 1fr !important;
+}
+._cdo1mj {
+  height: 100% !important;
+  width: 100% !important;
+}
+._1emsdka {
+  height: 100% !important;
+  position: relative !important;
+  width: 100% !important;
+}
+._1xh26pm2 {
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-weight: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  line-height: inherit !important;
+  color: inherit !important;
+  text-decoration: underline !important;
+  appearance: none !important;
+  background: transparent !important;
+  border: 0px !important;
+  cursor: pointer !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  user-select: auto !important;
+  display: block !important;
+  height: 100% !important;
+  position: relative !important;
+  width: 100% !important;
+  -webkit-tap-highlight-color: transparent !important;
+  outline: none !important;
+  text-align: left !important;
+}
+._1oaklsk {
+  height: 0px !important;
+  min-height: 100% !important;
+  min-width: 100% !important;
+  position: relative !important;
+}
+._1xh26pm2::after {
+  border: 0px solid rgb(0, 0, 0) !important;
+  content: "" !important;
+  display: block !important;
+  pointer-events: none !important;
+  position: absolute !important;
+  left: 0px !important;
+  top: 0px !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+._1emsdka::after {
+  background-color: black !important;
+  inset: 0px !important;
+  content: "" !important;
+  opacity: 0 !important;
+  pointer-events: none !important;
+  position: absolute !important;
+  transition-duration: 0s !important;
+  transition-property: opacity !important;
+  transition-timing-function: ease-out !important;
+  z-index: 2 !important;
+}
+._skzmvy {
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+}
+._1h6n1zu {
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+._1byskwn {
+  -webkit-box-pack: start !important;
+  -webkit-box-align: stretch !important;
+  display: flex !important;
+  align-items: stretch !important;
+  justify-content: flex-start !important;
+  flex-wrap: wrap !important;
+  width: calc(100% + 12px) !important;
+  margin-left: -6px !important;
+  margin-right: -6px !important;
+}
+@supports (object-fit: cover) {
+  ._15p4g025 {
+    display: none !important;
+    background-image: none !important;
+  }
+}
+._15p4g025 {
+  display: inline-block !important;
+  vertical-align: bottom !important;
+  height: 100% !important;
+  width: 100% !important;
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+._1lkwexi4 {
+  display: grid !important;
+  grid-auto-columns: 1fr !important;
+  grid-auto-rows: 1fr !important;
+  gap: 8px !important;
+  grid-template-columns: 1fr 1fr !important;
+}
+@media (min-width: 375px) {
+  ._1byskwn {
+    margin-left: -6px !important;
+    margin-right: -6px !important;
+    width: calc(100% + 12px) !important;
+  }
+}
+@media (min-width: 744px) {
+  ._1byskwn {
+    margin-left: -8px !important;
+    margin-right: -8px !important;
+    width: calc(100% + 16px) !important;
+  }
+}
+@media (min-width: 950px) {
+  ._1byskwn {
+    margin-left: -8px !important;
+    margin-right: -8px !important;
+    width: calc(100% + 16px) !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._1byskwn {
+    margin-left: -8px !important;
+    margin-right: -8px !important;
+    width: calc(100% + 16px) !important;
+  }
+}
+@media (min-width: 1440px) {
+  ._1byskwn {
+    margin-left: -8px !important;
+    margin-right: -8px !important;
+    width: calc(100% + 16px) !important;
+  }
+}
+._1gjkp1 {
+  animation-fill-mode: both !important;
+  animation-delay: 0.3s !important;
+  animation-duration: 0.3s !important;
+  animation-iteration-count: 1 !important;
+  animation-timing-function: ease-in-out !important;
+  animation-name: keyframe_18jn58a !important;
+}
+._le6wlg {
+  -webkit-box-lines: multiple !important;
+  -webkit-box-pack: start !important;
+  -ms-flex-pack: start !important;
+  -webkit-box-align: stretch !important;
+  -ms-flex-align: stretch !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: stretch !important;
+  align-items: stretch !important;
+  -webkit-justify-content: flex-start !important;
+  justify-content: flex-start !important;
+  -webkit-flex-wrap: wrap !important;
+  -ms-flex-wrap: wrap !important;
+  flex-wrap: wrap !important;
+  width: 100% !important;
+  padding-left: var(--gp-padding-xsmallAndAbove, 24px) !important;
+  padding-right: var(--gp-padding-xsmallAndAbove, 24px) !important;
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
+@media (min-width: 375px) {
+  ._le6wlg {
+    padding-left: var(--gp-padding-smallAndAbove, 24px) !important;
+    padding-right: var(--gp-padding-smallAndAbove, 24px) !important;
+  }
+}
+@media (min-width: 744px) {
+  ._le6wlg {
+    padding-left: var(--gp-padding-mediumAndAbove, 40px) !important;
+    padding-right: var(--gp-padding-mediumAndAbove, 40px) !important;
+  }
+}
+@media (min-width: 950px) {
+  ._le6wlg {
+    padding-left: var(--gp-padding-mediumPlusAndAbove, 40px) !important;
+    padding-right: var(--gp-padding-mediumPlusAndAbove, 40px) !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._le6wlg {
+    padding-left: var(--gp-padding-largeAndAbove, 80px) !important;
+    padding-right: var(--gp-padding-largeAndAbove, 80px) !important;
+  }
+}
+@media (min-width: 1440px) {
+  ._le6wlg {
+    max-width: none !important;
+    padding-left: var(--gp-padding-xlargeAndAbove, 80px) !important;
+    padding-right: var(--gp-padding-xlargeAndAbove, 80px) !important;
+  }
+}
+._12ifkibl {
+  position: relative !important;
+  width: 100% !important;
+  margin-left: 0% !important;
+  margin-right: 0% !important;
+  padding-left: 6px !important;
+  padding-right: 6px !important;
+}
+@media (min-width: 375px) {
+  ._12ifkibl {
+    padding-left: 6px !important;
+    padding-right: 6px !important;
+  }
+}
+@media (min-width: 744px) {
+  ._12ifkibl {
+    width: 33.3333% !important;
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 950px) {
+  ._12ifkibl {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._12ifkibl {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 1440px) {
+  ._12ifkibl {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 744px) {
+  ._4cdkw4 {
+    padding-bottom: 16px !important;
+    position: sticky !important;
+    top: 16px !important;
+  }
+}
+@media (min-width: 1128px) {
+ ._4cdkw4 {
+   top: 24px !important;
+ }
+}
+@media (min-width: 744px) {
+  .dir.pxj7xmk[class][class] {
+    padding-bottom: calc(var(--computedBottomMediumAndAbove) * var(--fgg-f-l-a));
+    padding-top: calc(var(--computedTopMediumAndAbove) * var(--fgg-f-l-a));
+  }
+}
+@media (min-width: 1128px) {
+  .dir.pxj7xmk[class][class] {
+    padding-bottom: calc(var(--computedBottomLargeAndAbove) * var(--fgg-f-l-a));
+    padding-top: calc(var(--computedTopLargeAndAbove) * var(--fgg-f-l-a));
+  }
+}
+.hnwb2pb[class][class] {
+  color: inherit;
+  font-size: 1em;
+  font-weight: inherit;
+  line-height: inherit;
+}
