--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4907,6 +4907,17 @@ select[disabled] {
 .text-center {
   text-align: center !important;
 }
+.w-full {
+  width: 100% !important;
+}
+.w-fit-content {
+  width: fit-content;
+}
+@media (min-width: 744px) {
+  .w-md-auto {
+    width: auto !important;
+  }
+}
 
 /*! ------------------- */
 /*! Footer              */
