explore-filter-daterange -> calendar

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -602,7 +602,7 @@
 .relative {
   position: relative !important;
 }
-.calendar__days {
+.calendar__week {
   position: relative !important;
   margin-left: 9px !important;
 }
