--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -12117,7 +12117,7 @@ fieldset[disabled] .btn {
 /* /Buttons */
 
 /* Explore Filter Daterange */
-.calendar__date-next-month {
+.calendar__next-month {
   display: inline-block !important;
   vertical-align: top !important;
   min-height: 100% !important;
@@ -12191,7 +12191,7 @@ fieldset[disabled] .btn {
   position: absolute !important;
   left: 9px !important;
 }
-.calendar__date-prev-month {
+.calendar__prev-month {
   display: inline-block !important;
   vertical-align: top !important;
   min-height: 100% !important;
@@ -12201,7 +12201,7 @@ fieldset[disabled] .btn {
   pointer-events: none !important;
   visibility: hidden !important;
 }
-.calendar__date-current-month {
+.calendar__current-month {
   display: inline-block !important;
   vertical-align: top !important;
   min-height: 100% !important;
@@ -12777,7 +12777,7 @@ fieldset[disabled] .btn {
   box-shadow: 0 0 0 2px #222, 0 0 0 4px rgba(255, 255, 255, 0.8) !important;
   background: #f7f7f7 !important;
 }
-.explore-filter__date-off-text {
+.calendar__off-text {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   -webkit-box-pack: center !important;
@@ -12798,7 +12798,7 @@ fieldset[disabled] .btn {
   text-decoration: none !important;
   opacity: 0.25 !important;
 }
-.explore-filter__date-broder-right {
+.calendar__border-right {
   box-sizing: border-box !important;
   cursor: pointer !important;
   text-align: center !important;
@@ -12810,7 +12810,7 @@ fieldset[disabled] .btn {
   border-top-right-radius: 4px !important;
   border-bottom-right-radius: 4px !important;
 }
-.explore-filter__date-broder-left {
+.calendar__border-left {
   box-sizing: border-box !important;
   cursor: pointer !important;
   text-align: center !important;
@@ -12822,7 +12822,7 @@ fieldset[disabled] .btn {
   border-top-left-radius: 4px !important;
   border-bottom-left-radius: 4px !important;
 }
-.explore-filter__date {
+.calendar__day {
   box-sizing: border-box !important;
   cursor: pointer !important;
   text-align: center !important;
@@ -12832,10 +12832,10 @@ fieldset[disabled] .btn {
   color: #222 !important;
   padding: 0 !important;
 }
-.explore-filter__date-month-body {
+.calendar__month-body {
   border-collapse: separate !important;
 }
-.explore-filter__date-off-broder-right {
+.calendar__off-border-right {
   box-sizing: border-box !important;
   text-align: center !important;
   position: relative !important;
@@ -12847,7 +12847,7 @@ fieldset[disabled] .btn {
   border-bottom-right-radius: 4px !important;
   background: #fff !important;
 }
-.explore-filter__date-off-border-left {
+.calendar__off-border-left {
   box-sizing: border-box !important;
   text-align: center !important;
   position: relative !important;
@@ -12859,7 +12859,7 @@ fieldset[disabled] .btn {
   border-bottom-left-radius: 4px !important;
   background: #fff !important;
 }
-.explore-filter__date-off {
+.calendar__off {
   box-sizing: border-box !important;
   text-align: center !important;
   position: relative !important;
@@ -12869,13 +12869,13 @@ fieldset[disabled] .btn {
   padding: 0 !important;
   background: #fff !important;
 }
-.explore-filter__date-month-content {
+.calendar__month-content {
   background: 0 0 !important;
   text-align: center !important;
   vertical-align: top !important;
   user-select: none !important;
 }
-.explore-filter__date-month-header {
+.calendar__month-header {
   font-size: 16px !important;
   line-height: 20px !important;
   color: #222 !important;
@@ -12886,7 +12886,7 @@ fieldset[disabled] .btn {
     'Helvetica Neue', sans-serif !important;
   font-weight: 600 !important;
 }
-.explore-filter__date-text {
+.calendar__text {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   -webkit-box-pack: center !important;
@@ -12905,7 +12905,7 @@ fieldset[disabled] .btn {
   color: #222 !important;
   border: 1.5px solid #fff !important;
 }
-.explore-filter__date-text:hover {
+.calendar__text:hover {
   background: #fff !important;
   border: 1.5px solid #222 !important;
 }
