--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -24656,7 +24656,7 @@ html :where(img[class*='wp-image-']) {
   font-weight: 400 !important;
   text-decoration: line-through !important;
 }
-.explore-filter__date-text {
+.calendar__text {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   -webkit-box-pack: center !important;
@@ -24675,7 +24675,7 @@ html :where(img[class*='wp-image-']) {
   color: #222 !important;
   border: 1.5px solid #fff !important;
 }
-.explore-filter__date-text:hover {
+.calendar__text:hover {
   background: #fff !important;
   border: 1.5px solid #222 !important;
 }
