--- a/src/css/components/explore-filter.css
+++ b/src/css/components/explore-filter.css
@@ -210,7 +210,7 @@
   box-shadow: 0 0 0 2px #222, 0 0 0 4px rgba(255, 255, 255, 0.8) !important;
   background: #f7f7f7 !important;
 }
-.explore-filter__date-off-text {
+.calendar__off-text {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   -webkit-box-pack: center !important;
@@ -231,7 +231,7 @@
   text-decoration: none !important;
   opacity: 0.25 !important;
 }
-.explore-filter__date-broder-right {
+.calendar__border-right {
   box-sizing: border-box !important;
   cursor: pointer !important;
   text-align: center !important;
@@ -243,7 +243,7 @@
   border-top-right-radius: 4px !important;
   border-bottom-right-radius: 4px !important;
 }
-.explore-filter__date-broder-left {
+.calendar__border-left {
   box-sizing: border-box !important;
   cursor: pointer !important;
   text-align: center !important;
@@ -255,7 +255,7 @@
   border-top-left-radius: 4px !important;
   border-bottom-left-radius: 4px !important;
 }
-.explore-filter__date {
+.calendar__day {
   box-sizing: border-box !important;
   cursor: pointer !important;
   text-align: center !important;
@@ -265,10 +265,10 @@
   color: #222 !important;
   padding: 0 !important;
 }
-.explore-filter__date-month-body {
+.calendar__month-body {
   border-collapse: separate !important;
 }
-.explore-filter__date-off-broder-right {
+.calendar__off-border-right {
   box-sizing: border-box !important;
   text-align: center !important;
   position: relative !important;
@@ -280,7 +280,7 @@
   border-bottom-right-radius: 4px !important;
   background: #fff !important;
 }
-.explore-filter__date-off-border-left {
+.calendar__off-border-left {
   box-sizing: border-box !important;
   text-align: center !important;
   position: relative !important;
@@ -292,7 +292,7 @@
   border-bottom-left-radius: 4px !important;
   background: #fff !important;
 }
-.explore-filter__date-off {
+.calendar__off {
   box-sizing: border-box !important;
   text-align: center !important;
   position: relative !important;
@@ -302,13 +302,13 @@
   padding: 0 !important;
   background: #fff !important;
 }
-.explore-filter__date-month-content {
+.calendar__month-content {
   background: 0 0 !important;
   text-align: center !important;
   vertical-align: top !important;
   user-select: none !important;
 }
-.explore-filter__date-month-header {
+.calendar__month-header {
   font-size: 16px !important;
   line-height: 20px !important;
   color: #222 !important;
@@ -319,7 +319,7 @@
     'Helvetica Neue', sans-serif !important;
   font-weight: 600 !important;
 }
-.explore-filter__date-text {
+.calendar__text {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   -webkit-box-pack: center !important;
@@ -338,7 +338,7 @@
   color: #222 !important;
   border: 1.5px solid #fff !important;
 }
-.explore-filter__date-text:hover {
+.calendar__text:hover {
   background: #fff !important;
   border: 1.5px solid #222 !important;
 }
