--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -28011,7 +28011,7 @@ tr.hide {
   color: #222 !important;
   margin-bottom: 8px !important;
 }
-.calendar-sideba__qnty-sched {
+.text-sm {
   font-size: 14px !important;
   line-height: 18px !important;
 }
