--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -32132,7 +32132,7 @@ tr.hide {
   transform-origin: 50% 100% !important;
   will-change: transform !important;
 }
-.calendar-sideba__sched-event {
+.pb-4 {
   padding-bottom: 16px !important;
 }
 .app-theme__save-btn {
@@ -42990,7 +42990,7 @@ textarea {
   margin: 0 !important;
   padding-left: 16px !important;
 }
-.calendar-sideba__sched-event-time-wrapper {
+.font-extrabold {
   font-weight: 800 !important;
 }
 .site-content__content-wrapper-rules-radio-grp {
