calendar-sideba__sched-event-note-wrapper -> text-sm

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -13136,8 +13136,7 @@ h3:first-child {
   font-size: 32px !important;
   line-height: 36px !important;
 }
-.calendar-sideba__sched-event-note-wrapper {
-  text-align: left !important;
+.text-sm {
   font-size: 14px !important;
   line-height: 18px !important;
 }
