--- a/src/css/global.css
+++ b/src/css/global.css
@@ -26,8 +26,8 @@
 .products-container__where-wrapper {
   margin-top: 24px!important
 }
-._13wkz77,
-.calendar-sideba__sched-btn-wrapper {
+.pt-2,
+.pt-2 {
   padding-top: 8px!important
 }
 ._16sb0g4v,
