--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15648,8 +15648,8 @@ fieldset[disabled] .btn {
 .products-container__where-wrapper {
   margin-top: 24px!important
 }
-._13wkz77,
-.calendar-sideba__sched-btn-wrapper {
+.pt-2,
+.pt-2 {
   padding-top: 8px!important
 }
 ._16sb0g4v,
