--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -1919,7 +1919,7 @@
   font-size: 22px !important;
   line-height: 26px !important;
 }
-.calendar-sideba__sched-btn-wrapper {
+.pt-2 {
   padding-top: 8px !important;
 }
 .calendar-sideba__sched-insight-date {
@@ -41419,7 +41419,7 @@ tr.hide {
   padding-top: 12px !important;
   padding-bottom: 12px !important;
 }
-._13wkz77 {
+.pt-2 {
   padding-top: 8px !important;
 }
 .products-container__alert-warning-date-text {
