--- a/src/css/global.css
+++ b/src/css/global.css
@@ -12,8 +12,8 @@
 .place__recommended-no {
   margin-top: 8px!important
 }
-.new-arrow-space,
-.ml1 {
+.ml-2,
+.ml-2 {
   margin-left: 8px!important
 }
 .payment-payout__notice-desc-text,
