--- a/src/css/layouts/footer.css
+++ b/src/css/layouts/footer.css
@@ -3,14 +3,14 @@
 /*! ------------------- */
 @media (min-width: 744px) {
   .footer__container {
-    padding-left: 24px !important;
-    padding-right: 24px !important;
+    padding-left: 24px;
+    padding-right: 24px ;
   }
 }
 @media (min-width: 375px) {
   .footer__container {
-    padding-left: 80px !important;
-    padding-right: 80px !important;
+    padding-left: 80px ;
+    padding-right: 80px;
   }
 }
 @media (min-width: 744px) {
@@ -133,39 +133,39 @@
   border-top: 1px solid #ddd !important;
 }
 .footer__container {
-  padding-left: 24px !important;
-  padding-right: 24px !important;
+  padding-left: 24px;
+  padding-right: 24px;
   margin: 0 auto !important;
   max-width: 1440px !important;
 }
 @media (min-width: 375px) {
   .footer__container {
-    padding-left: 24px !important;
-    padding-right: 24px !important;
+    padding-left: 24px ;
+    padding-right: 24px;
   }
 }
 @media (min-width: 744px) {
   .footer__container {
-    padding-left: 40px !important;
-    padding-right: 40px !important;
+    padding-left: 40px ;
+    padding-right: 40px;
   }
 }
 @media (min-width: 950px) {
   .footer__container {
-    padding-left: 40px !important;
-    padding-right: 40px !important;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
 @media (min-width: 1128px) {
   .footer__container {
-    padding-left: 80px !important;
-    padding-right: 80px !important;
+    padding-left: 80px;
+    padding-right: 80px;
   }
 }
 @media (min-width: 1440px) {
   .footer__container {
-    padding-left: 80px !important;
-    padding-right: 80px !important;
+    padding-left: 80px;
+    padding-right: 80px;
   }
 }
 @supports (--a: a) {
@@ -580,39 +580,39 @@
   }
 }
 .footer__container {
-  padding-left: 24px !important;
-  padding-right: 24px !important;
+  padding-left: 24px;
+  padding-right: 24px;
   margin: 0 auto !important;
   max-width: 1440px !important;
 }
 @media (min-width: 375px) {
   .footer__container {
-    padding-left: 24px !important;
-    padding-right: 24px !important;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 @media (min-width: 744px) {
   .footer__container {
-    padding-left: 40px !important;
-    padding-right: 40px !important;
+    padding-left: 40px ;
+    padding-right: 40px ;
   }
 }
 @media (min-width: 950px) {
   .footer__container {
-    padding-left: 40px !important;
-    padding-right: 40px !important;
+    padding-left: 40px ;
+    padding-right: 40px ;
   }
 }
 @media (min-width: 1128px) {
   .footer__container {
-    padding-left: 80px !important;
-    padding-right: 80px !important;
+    padding-left: 80px ;
+    padding-right: 80px ;
   }
 }
 @media (min-width: 1440px) {
   .footer__container {
-    padding-left: 80px !important;
-    padding-right: 80px !important;
+    padding-left: 80px ;
+    padding-right: 80px ;
   }
 }
 @supports (--a: a) {
