--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -37,6 +37,10 @@
 .translateY-15 {
   transform: translateY(15px);
 }
+.px-0 {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
 @media (min-width: 375px) {
   .flex-row-full-width {
     padding-left: 24px !important;
@@ -44,6 +48,12 @@
   }
   .block-sm {
     display: block !important;
+  }
+  .grid-sm {
+    display: grid !important;
+  }
+  .hidden-sm {
+    display: none !important;
   }
 }
 @media (min-width: 744px) {
@@ -103,6 +113,9 @@
   .block-xxl {
     display: block !important;
   }
+  .hidden-xxl {
+    display: none !important;
+  }
 }
 .container {
   max-width: 1760px;
@@ -130,7 +143,7 @@
 .absolute {
   position: absolute !important;
 }
-.ml1 {
+.ml-2 {
   margin-left: 8px;
 }
 .m2 {
