--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -52276,3 +52276,30 @@ body {
 ._sp8hvh:disabled::before {
   background: rgb(255, 255, 255) !important;
 }
+._joxslpg {
+  cursor: pointer !important;
+  text-align: center !important;
+  border: 1px solid rgb(34, 34, 34) !important;
+  outline: none !important;
+  padding: 0px !important;
+  margin: 0px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  position: relative !important;
+  transition-property: -ms-transform, -webkit-transform, transform, background-color, border-color !important;
+  transition-duration: 0.15s !important;
+  transition-timing-function: ease-in-out !important;
+  border-radius: 16px !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  height: 100% !important;
+  width: 100% !important;
+  background-color: rgb(247, 247, 247) !important;
+  color: rgb(34, 34, 34) !important;
+}
+@media (hover: hover)
+{
+  ._joxslpg:hover {
+    color: rgb(0, 0, 0) !important;
+    border-color: rgb(0, 0, 0) !important;
+  }
+}
